fix: PWA home screen icon not visible

--- a/src/components/Setting/styles.scss
+++ b/src/components/Setting/styles.scss
@@ -1,6 +1,7 @@
 @import "../../assets/base.scss";
 .setting{
   width: 100%;
+  height: 100%;
   padding-top: 100px;
   text-align: center;
   position: relative;
@@ -55,8 +56,8 @@
   }
   .version {
     position: absolute;
-    bottom: 10px;
-    right: 10px;
+    bottom: 60px;
+    right: 20px;
     color: $gray;
     font-size: 14px;
   }
